[1.4.0]

The 'isync' compatibility wrapper was removed.

[1.3.0]

Network timeout handling has been added.

Support for proper Maildir++ and a Maildir sub-folder naming style
without extra dots have been added.

Support for TLS client certificates was added.

Support for recovering from baseless UID validity changes was added.

The get-cert script was renamed to mbsync-get-cert.

[1.2.0]

The 'isync' compatibility wrapper is now deprecated.

An IMAP Path/NAMESPACE rooted in INBOX won't be handled specially any more.
This means that some Patterns may need adjustment.

The default output is a lot less verbose now.
The meanings of the -V and -D options changed significantly.

The SSL/TLS configuration has been re-designed.
SSL is now explicitly enabled or disabled - "use SSL if available" is gone.
Notice: Tunnels are assumed to be secure and thus default to no SSL.

Support for SASL (flexible authentication) has been added.

Support for Windows file systems has been added.

Support for compressed data transfer has been added.

Folder deletions can be propagated now.

[1.1.0]

Support for hierarchical mailboxes in Patterns.

Full support for IMAP pipelining (streaming, parallelization) added.
This is considerably faster especially with high-latency networks.

Faster and hopefully more reliable support for IMAP servers without the
UIDPLUS extension (e.g., M$ Exchange).

More automatic handling of SSL certificates.

IPv6 support.

IMAP password query can be scripted.

Message arrival dates can be propagated.

Data safety in case of system crashes was improved.

MaxMessages was made vastly more useful.

[1.0.0]

Essentially a rewrite. Synchronization state storage concept, configuration
and command line changed entirely.
But you needn't to worry about the upgrade, as a fully automated migration
path is provided, even for users of isync 0.7 and below.
Still, you should re-read the manual to be able to take full advantage of the
new features:
