@@ -2,6 +2,8 @@
 
 The 'isync' compatibility wrapper was removed.
 
+The IMAP '$Forwarded' / Maildir 'P' (passed) flag is supported now.
+
 [1.3.0]
 
 Network timeout handling has been added.
